--- a/themes/editor/exampleSite/config.toml
+++ b/themes/editor/exampleSite/config.toml
@@ -65,7 +65,7 @@ contact_form_action = "#" # contact form works with https://formspree.io
 # Search
 search = true
 # Main section
-mainSections = ["blogs"]
+mainSections = ["blog"]
 # custom script on header
 custom_script= ""
 
@@ -167,8 +167,8 @@ url = "about/"
 weight = 2
 
 [[Languages.en.menu.main]]
-name = "Blogs"
-url = "blogs/"
+name = "Blog"
+url = "blog/"
 weight = 3
 
 [[Languages.en.menu.main]]
@@ -236,8 +236,8 @@ url = "about/"
 weight = 2
 
 [[Languages.fr.menu.main]]
-name = "Les Blogs"
-url = "blogs/"
+name = "Le Blog"
+url = "blog/"
 weight = 3
 
 [[Languages.fr.menu.main]]
