changed the logo to webzy image

--- a/config.toml
+++ b/config.toml
@@ -50,17 +50,17 @@ link = "plugins/search/search.js"
 #################### default parameters ################################
 [params]
 favicon = "images/logo-sm.svg"
-logo_text = "Editor"
+logo_text = "webzy"
 logo = "images/logo.svg"
 logo_height = "26px"
 logo_rotate = true
 # Meta data
-description = "This is meta description"
-author = "Themefisher"
+description = "webzy AI-generated artwork"
+author = "webzy"
 # contact info
 address = "9567 Turner Trace Apt. BC C3G8A4"
 mobile = "+211234565523"
-email = "hello@editor.com"
+email = "hello@webzy.com"
 # contact form action
 contact_form_action = "https://formsubmit.co/hello@webzy.com" # contact form works with https://formspree.io
 # Search
