edited contact link and removed French

--- a/config.toml
+++ b/config.toml
@@ -52,8 +52,8 @@ link = "plugins/search/search.js"
 favicon = "images/logo-sm.svg"
 logo_text = "webzy"
 logo = "images/logo.svg"
-logo_height = "50px"
-logo_rotate = false
+logo_height = "80px"
+logo_rotate = true
 # Meta data
 description = "webzy blog"
 author = "webzy"
@@ -153,7 +153,7 @@ languageCode = "en-us"
 contentDir = "content/english"
 weight = 1
 # copyright
-copyright = "Copyright &copy;2021 <br> Designed &amp; Developed by [Gethugothemes](https://gethugothemes.com/)"
+copyright = "Copyright &copy;2023 <br> Designed &amp; Developed by [webzy](https://webzy.com/)"
 
 
 ############# English navigation ##############
